--- a/IOSND-MemeMe1.0/IOSND-MemeMe1.0/Base.lproj/Main.storyboard
+++ b/IOSND-MemeMe1.0/IOSND-MemeMe1.0/Base.lproj/Main.storyboard
@@ -58,7 +58,7 @@
                                     <action selector="bottomTextDidEndEdit:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="yZv-nh-Axq"/>
                                 </connections>
                             </textField>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kM0-Bo-OGg">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kM0-Bo-OGg">
                                 <rect key="frame" x="0.0" y="64" width="375" height="559"/>
                             </imageView>
                         </subviews>
